--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,8 +25,8 @@ jobs:
 
           # Restart backend
           cd server
-          pm2 restart trip-backend --update-env
-          
+          pm2 restart trip-backend
+
 
           # Rebuild frontend
           cd ../client
