--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,14 +2,34 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Debug C++ Program",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${workspaceFolder}/cpp-engine/src/engine.exe",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${workspaceFolder}/cpp-engine/src",
+      "environment": [],
+      "externalConsole": true,
+      "MIMode": "gdb",
+      "miDebuggerPath": "C:\\msys64\\mingw64\\bin\\gdb.exe",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ]
+    },
+    {
       "name": "C/C++ Runner: Debug Session",
       "type": "cppdbg",
       "request": "launch",
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": "c:/Users/jdnes/SmartTripOptimizer/Main/smart-trip-optimizer/cpp-engine/src",
-      "program": "c:/Users/jdnes/SmartTripOptimizer/Main/smart-trip-optimizer/cpp-engine/src/build/Debug/outDebug",
+      "cwd": "c:/Users/jdnes/SmartTripOptimizer/Main2/smart-trip-optimizer/cpp-engine/src",
+      "program": "c:/Users/jdnes/SmartTripOptimizer/Main2/smart-trip-optimizer/cpp-engine/src/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
