--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "date-fns": "^4.1.0",
     "react": "^18.2.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^11.0.5"
