--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "date-fns": "^4.1.0",
+    "mapbox-gl": "^2.6.1",
     "react": "^18.2.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^6.1.19",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^11.0.5"
   },
